Add links to footer, Add scroll animation in hero of index.html and style.css

--- a/about.html
+++ b/about.html
@@ -46,19 +46,82 @@
     <main class="main root-body">
         <!-- Hero -->
         <div class="section-wrapper">
-            <section id="section-heros">
+            <section id="section-heros-about">
                 <div class="heros">
                     <div class="hero-item hero">
                         <div class="hero-content">
                             <!--<img src="./img/logo-new-light.png" alt="Stone Crafter's International">-->
-                            <h1>Stone Crafter's International</h1>
-                            <p>Coming Soon</p>
-                            <a href="index.html">Return Home</a>
+                            <h1>About Us</h1>
                         </div>
                         <img class="poster" src="./img/unsplash/spacejoy-9M66C_w_ToM-unsplash.webp" alt="A living room">
                     </div>
                 </div>
             </section>
+        </div>
+        <!-- Mission -->
+        <div class="mission">
+            <div class="container">
+                <h2>Our Mission</h2>
+                <div class="mission-statement">
+                    Where Your Vision Meets Reality
+                </div>
+                <div class="mission-statement-desc">
+                    <p>
+                        Stone Crafters is a local small business who mainly specializes in kitchen and bathroom remodeling. 
+                        With our teams dedication, we do our best to exceed our clients needs in order to make your everyday home become your dream home. 
+                        Stone Crafters will accommodate to ensure the customers vision comes to life regardless of budget, material needs, and even unique design ideas. 
+                        You got the vision, we will install it. 
+                        Our team will work with unparalleled efficiency and professionalism considering that building customers ideal home spaces is our number one goal. 
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- About -->
+        <div class="about">
+            <div class="container">
+                <h2>About Stone Crafter's International</h2>
+                <div class="about-statement">
+                    <p>
+                        Established in 2016. 
+                        <br><br>
+                        Since we opened our doors and began designing and fabricating countertops and remodels, we have been locally owned and operated in the beautiful city of Modesto, CA. 
+                        We truly pride ourselves in our superior craftsmanship of countertops and customer service that is second to none. 
+                        We strive to be the premier source for custom fabrication of quality solid surface products and natural stone. 
+                        Our business was founded on the highest standards of excellence; a tradition we extend to each client.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Specialties -->
+        <div class="specialties">
+            <div class="container">
+                <h2>Our Specialties</h2>
+                <div class="specialties-statement">
+                    <p>Over time, our team has grown and improved tremendously. 
+                        We are able to get our specialty jobs done with ease thanks to our amazing crew. Our specialty jobs being:
+                    </p>
+                    <ul>
+                        <li>Stone Counter Tops and Vanity.s (quartz, granite, quartzite, porcelain)</li>
+                        <li>Solid Surface Showers (piedrafina, quartz)</li>
+                        <li>Tile surfaces, surrounds, and flooring</li>
+                        <li>LVT flooring</li>
+                    </ul>
+                    <p>
+                        We personally don't do plumbing, painting, or electrical work but we are in contact with some our favorite local businesses whom we trust to work with. 
+                        If the customer is willing to work with us, we can help provide these services in order to make your experience remodeling a lot easier. 
+                    </p>
+                    <p>
+                        <b>Disclaimer:</b> While we do work with local people, they have their own schedule and business to run as well. 
+                        We would recommend to find someone from your end if it seems like there will be any conflict.
+                    </p>
+                    <p>
+                        As a small business, we hope our customers are able to understand that rescheduling might occur due to late material arrival, sick employee's, and so on. 
+                        As much as we love to get our jobs done within said time frames, situations out of our control may occur. 
+                        Having to rush a job and submitting bad work is much worse than lending us some extra time for a quality remodel. 
+                        We aren't perfect, but we ensure our work is.
+                    </p>
+                </div>
+            </div>
         </div>
         <!-- Footer -->
         <div id="footer">
@@ -67,11 +130,11 @@
                     <div class="margin-wrapper-tb-10 link-wrapper-lr-10n">
                         <div class="container links">
                             <a href="index.html">Home</a>
-                            <a href="#">Kitchen</a>
-                            <a href="#">Bath</a>
-                            <a href="#">Countertops</a>
-                            <a href="#">Flooring</a>
-                            <a href="#">About Us</a>
+                            <a href="kitchen.html">Kitchen</a>
+                            <a href="bath.html">Bath</a>
+                            <a href="countertops.html">Countertops</a>
+                            <a href="flooring.html">Flooring</a>
+                            <a href="about.html">About Us</a>
                         </div>
                     </div>
                     <div class="margin-wrapper-tb-10">
