--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
                         </div>
                         <img class="poster" src="./img/unsplash/kenny-eliason-mGZX2MOPR-s-unsplash.webp" alt="A living room">
                     </div>
+                    <div class="scroll">
+                        <div class="mouse">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="#fff" class="bi bi-mouse" viewBox="0 0 17 27">
+                                <path d="M8 3a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 3zm4 8a4 4 0 0 1-8 0V5a4 4 0 1 1 8 0v6zM8 0a5 5 0 0 0-5 5v6a5 5 0 0 0 10 0V5a5 5 0 0 0-5-5z"/>
+                              </svg>
+                        </div>
+                        <div class="line">
+
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
@@ -102,11 +112,11 @@
                     <div class="margin-wrapper-tb-10 link-wrapper-lr-10n">
                         <div class="container links">
                             <a href="index.html">Home</a>
-                            <a href="#">Kitchen</a>
-                            <a href="#">Bath</a>
-                            <a href="#">Countertops</a>
-                            <a href="#">Flooring</a>
-                            <a href="#">About Us</a>
+                            <a href="kitchen.html">Kitchen</a>
+                            <a href="bath.html">Bath</a>
+                            <a href="countertops.html">Countertops</a>
+                            <a href="flooring.html">Flooring</a>
+                            <a href="about.html">About Us</a>
                         </div>
                     </div>
                     <div class="margin-wrapper-tb-10">
