--- a/flooring.html
+++ b/flooring.html
@@ -67,11 +67,11 @@
                     <div class="margin-wrapper-tb-10 link-wrapper-lr-10n">
                         <div class="container links">
                             <a href="index.html">Home</a>
-                            <a href="#">Kitchen</a>
-                            <a href="#">Bath</a>
-                            <a href="#">Countertops</a>
-                            <a href="#">Flooring</a>
-                            <a href="#">About Us</a>
+                            <a href="kitchen.html">Kitchen</a>
+                            <a href="bath.html">Bath</a>
+                            <a href="countertops.html">Countertops</a>
+                            <a href="flooring.html">Flooring</a>
+                            <a href="about.html">About Us</a>
                         </div>
                     </div>
                     <div class="margin-wrapper-tb-10">
