Add mobile responsiveness to all sections except navigation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <meta name="twitter:title" content="Stone Crafter's International">
     <meta name="twitter:url" content="https://26fcbadf.stonecrafters-international-llc.pages.dev/">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile-style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
@@ -31,15 +33,25 @@
             <a class="nav-logo">
                 <img src="./img/logo-new-light.png" alt="Stone Crafter's International">
             </a>
+            <div class="menu-btn">
+                <svg class="expand" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                </svg>
+                <svg  class="collapse" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                </svg>
+            </div>
             <div class="menu-wrapper">
-                <ul id="nav-items" class="nav-links">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="kitchen.html">Kitchen</a></li>
-                    <li><a href="bath.html">Bath</a></li>
-                    <li><a href="countertops.html">Countertops</a></li>
-                    <li><a href="flooring.html">Flooring</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                </ul>
+                <div class="menu">
+                    <ul id="nav-items" class="nav-links">
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="kitchen.html">Kitchen</a></li>
+                        <li><a href="bath.html">Bath</a></li>
+                        <li><a href="countertops.html">Countertops</a></li>
+                        <li><a href="flooring.html">Flooring</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
@@ -94,12 +106,12 @@
         <div class="testimonials">
             <h1>Testimonials</h1>
             <div class="container">
-                <span class="yelp-review" onchange="setPreferredColorScheme()" data-review-id="OUOSGlnvrvf3bBgEwtaJmQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=n1pACOovRCrtX7aO_Z37Uw" rel="nofollow noopener">Nicole M.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=OUOSGlnvrvf3bBgEwtaJmQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
+                <span class="yelp-review" data-review-id="OUOSGlnvrvf3bBgEwtaJmQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=n1pACOovRCrtX7aO_Z37Uw" rel="nofollow noopener">Nicole M.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=OUOSGlnvrvf3bBgEwtaJmQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
                 <span class="yelp-review" data-review-id="PE7H-UOEOSpA5K6dhSmTiQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=MUTEa-0FySw6teiRDRB8Sw" rel="nofollow noopener">Ivanna G.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=PE7H-UOEOSpA5K6dhSmTiQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
                 <span class="yelp-review" data-review-id="Q54Qr-ViL4-dpZgyo-XJ4Q" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=7rdz8WEXC-O52nEHLvgpJA" rel="nofollow noopener">Rachel K.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=Q54Qr-ViL4-dpZgyo-XJ4Q" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
                 <span class="yelp-review" data-review-id="P-ZNT_Uv-FjB93Yh7pmwaQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=dhdPhV6MA17oFVoj7zGj_g" rel="nofollow noopener">Leslie P.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=P-ZNT_Uv-FjB93Yh7pmwaQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
             </div>
-            <script async src="js/color-scheme-toggle.js"></script>
+            <script async src="/js/color-scheme-toggle.js"></script>
         </div>
         <hr>
         <!-- Call to Action and Contact -->
@@ -110,19 +122,21 @@
                     <div class="map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3159.5840085909254!2d-121.00225112266801!3d37.6354718720208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80905136c826e88b%3A0x1a247a1dca90c107!2sStone%20Crafter&#39;s!5e0!3m2!1sen!2sus!4v1699588016350!5m2!1sen!2sus" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                    <div class="phone">
-                        <a href="tel:+12098575305">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-                            </svg>
-                        </a>
-                    </div>
-                    <div class="mail">
-                        <a href="mailto:scorderdesk@yahoo.com?subject:General Inquires">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                                <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
-                            </svg>
-                        </a>
+                    <div class="links">
+                        <div class="phone">
+                            <a href="tel:+12098575305">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="mail">
+                            <a href="mailto:scorderdesk@yahoo.com?subject:General Inquires">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                                    <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -148,7 +162,7 @@
                     </div>
                     <div class="margin-wrapper-tb-10 copyright">Copyright © Stone Crafter's International, LLC. All Rights Reserved.</div>
                 </div>
-                <div class="aside">
+                <aside class="aside">
                     <div class="color-scheme-toggle" role="radiogroup" tabindex="0" aria-label="Selec a color scheme preference">
                         <label id="light">
                             <input type="radio" name="bg-color" value="light" autocomplete="off" onchange="setPreferredColorScheme()" checked>
@@ -166,7 +180,7 @@
                         -->
                     </div>
                     <script async src="js/color-scheme-toggle.js"></script>
-                </div>
+                </aside>
             </footer>
         </div>
     </main>
