Add lazy loading to images, fix JS background color issue for navMenu, modify css for containers

--- a/bath.html
+++ b/bath.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="margin-wrapper-tb-10">
                         <a href="index.html">
-                            <img class="footer-logo" src="./img/logo-new-light.png" alt="Stone Crafter's International">
+                            <img class="footer-logo" src="./img/logo-new-light.png" alt="Stone Crafter's International" loading="lazy">
                         </a>
                     </div>
                     <div class="margin-wrapper-tb-10 copyright">Copyright © Stone Crafter's International, LLC. All Rights Reserved.</div>
