--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <p>Design your dream home.</p>
                             <a href="mailto:scorderdesk@yahoo.com?subject=Request a quote">Request a quote</a>
                         </div>
-                        <img class="poster" src="./img/unsplash/kenny-eliason-mGZX2MOPR-s-unsplash.webp" alt="A living room">
+                        <img class="poster" src="./img/unsplash/kenny-eliason-mGZX2MOPR-s-unsplash.webp" alt="A living room" loading="lazy">
                     </div>
                     <div class="scroll">
                         <div class="mouse">
