Add links to product cards

--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@
         <div class="products">
             <h1>Our Products</h1>
             <div class="container">
-                <div class="card kitchen-card">
+                <a href="kitchen.html" class="card kitchen-card">
                     <div class="card-content">Kitchen</div>
-                </div>
-                <div class="card bath-card">
+                </a>
+                <a href="bath.html" class="card bath-card">
                     <div class="card-content">Bath</div>
-                </div>
-                <div class="card countertops-card">
+                </a>
+                <a href="countertops.html" class="card countertops-card">
                     <div class="card-content">Countertops</div>
-                </div>
-                <div class="card flooring-card">
+                </a>
+                <a href="flooring.html" class="card flooring-card">
                     <div class="card-content">Flooring</div>
-                </div>
+                </a>
             </div>
         </div>
         <!-- Background Divider -->
