--- a/index.html
+++ b/index.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stone Crafter's International - Home</title>
+    <meta name="Author" content="Stone Crafter's International, LLC.">
     <meta name="description" content="Design your dream home, from kitchens, bathrooms, countertops, and flooring, with the team at Stone Crafter's International.">
+    <meta name="keywords" content="Home renovation, home, renovation, kitchen renovation, kitchen, bath renovation, bathroom renovation, bath, bathroom, bathrooms, flooring, website">
     <!-- Open Graph Metadata -->
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Stone Crafter's International">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Pradheon/stonecrafters-international-llc/main/img/logo.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Pradheon/stonecrafters-international-llc/main/img/logo-new.jpg">
     <meta property="og:title" content="Stone Crafter's International">
     <meta property="og:description" content="Design your dream home, from kitchens, bathrooms, countertops, and flooring, with the team at Stone Crafter's International.">
-    <meta property="og:url" content="https://26fcbadf.stonecrafters-international-llc.pages.dev/">
+    <meta property="og:url" content="https://stonecrafters-international-llc.pages.dev/">
     <!-- Twitter Metadata -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/Pradheon/stonecrafters-international-llc/main/img/logo.png">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Pradheon/stonecrafters-international-llc/main/img/logo-new.jpg">
     <meta name="twitter:description" content="Design your dream home, from kitchens, bathrooms, countertops, and flooring, with the team at Stone Crafter's International.">
     <meta name="twitter:title" content="Stone Crafter's International">
-    <meta name="twitter:url" content="https://26fcbadf.stonecrafters-international-llc.pages.dev/">
+    <meta name="twitter:url" content="https://stonecrafters-international-llc.pages.dev/">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mobile-style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/img/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/img/favicon/favicon-64x64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
 </head>
 <body>
     <nav class="global-nav">
